# python-aoc2025

./: .gitignore  LICENSE  README.md  pyproject.toml
aoc2025/: util.py
aoc2025/day01/: solution.py
aoc2025/day02/: solution.py
aoc2025/day03/: solution.py
aoc2025/day04/: solution.py
aoc2025/day05/: solution.py
aoc2025/day06/: solution.py
aoc2025/day07/: solution.py
aoc2025/day08/: solution.py
aoc2025/utils/: puzzle_reader.py  solution_base.py
newday/: newday.py
newday/templates/: _test_day.py.j2  solution.py.j2
tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py
