[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "aoc2025",
    "newday",
]

[project]
name = "python-aoc2025"
version = "2025.0.0"
dependencies = [
    "wheel",
    "Jinja2",
    "Click",
    "sortedcontainers",
    "numpy",
    "networkx",
    "matplotlib",
    "black",
]
requires-python = ">=3.14"
authors = [
  {name = "Vance Morris", email = "vance.morris@gmail.com"},
]
description = "Advent of Code 2025 Solutions"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest_cov",
]

[project.scripts]
newday = "newday.newday:newday"
